Fixed footer text legibility

--- a/scss/problems.scss
+++ b/scss/problems.scss
@@ -136,7 +136,7 @@ textarea {
 
   .footer {
    text-align: center;
-   color: $secondary-color;
+   color: black;
   }
 
   .navbar {
